<resources>
    <string name="app_name">Tabon</string>
    <string name="action_settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="action_search">Search</string>

    <string name="order_hostory">Order History</string>
    <string name="settings">Settings</string>
    <string name="invite">Invite friends</string>
    <string name="about">About</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_out">Sign out</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/order_hostory</item>
        <item>@string/settings</item>
        <item>@string/invite</item>
        <item>@string/about</item>
        <item>@string/sign_out</item>
    </string-array>

    <string name="your_location">Your Location</string>
    <string name="local_area">Your Area</string>

    <string name="verify_phone">Verify Phone Number</string>
    <string name="enter_passcode">Please enter your passcode to verify</string>
    <string name="your_phone_number">your phone number</string>
    <string name="passcode_hint">Enter passcode</string>
    <string name="next">Next</string>
    <string name="enter_4_digits_code">Please enter 4 digits code which you have received in your registered Mobile.</string>
    <string name="enter_4_digits_code2">Please enter 4 digits code which you have received in your registered Mobile no or Email.</string>

    <string name="pin_content_desc">PIN input field</string>
    <string name="sign_in">Already a member? </string>
    <string name="sign_up_fb">CONTINUE WITH FACEBOOK</string>
    <string name="sign_up_email">Sign up with </string>
    <!--<string name="otp_not_received">If you have not received 4 digit code click on  <font color='black'>RESEND</font></string>-->
    <string name="otp_not_received">If you have not received 4 digit code click on</string>
    <string name="resend">RESEND</string>
    <string name="password">Enter new password</string>
    <string name="minimum_4_characters">Please enter your new password.</string>
    <string name="login_with_facebook">Login with facebook</string>
    <string name="login_with_ggl">Login with Google Plus</string>
    <string name="agree">I agree with</string>
    <string name="tnc">Terms &amp; conditions</string>
    <string name="save">Save</string>
    <string name="everybody_knows">Everybody knows that FridaysSM is a sure bet for an excellent time. But did you know that we are also a leading global franchisor.</string>
    <string name="some_says">Some say Cafe Delhi Heights is a great place to come over for perfect date. For others, it\'s the place to walk in with the family and</string>
    <string name="indian_chinese">Indian, Chinese, Lebanese and continental dishes served in a stylish bar with big screens sports.</string>
    <string name="tgi">TGI Fridays</string>
    <string name="khan">Khan Chacha</string>
    <string name="delhi_heights">Delhi Heights Cafe</string>
    <string name="my_bar_cafe">My Bar Cafe</string>
    <string name="thank_you">Thank you for Choosing</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="autocomplete_hint">\tEnter place name or address</string>
    <string name="selected_place">Last Selected Place:</string>
    <string name="clear_text">Clear Text</string>

    <!-- getString(String, Object...) does not support HTML tags directly, they need to be encoded first.
    Original string: <b>%1$s</b><br/><i>Place Id: %2$s</i><br/>Address: %3$s<br/>Phone: %4$s<br/>Website: %5$s-->
    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>
    <string name="intro_message">
        <![CDATA[
            This sample uses the Google Places Geo Data API for Android to provide autocomplete suggestions.
            It shows how to use a custom Adapter to display suggestions in an AutocompleteTextView.
            Once selected, details about a place are retrieved based on its Place id from the
            Places Geo Data API.
        ]]>
    </string>
    <string name="login">Login</string>
    <string name="submit">Submit</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_people_order">PeopleOrderActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>