<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp"
    tools:ignore="MissingPrefix">

    <TextView
        fontPath="fonts/Raleway-Regular.ttf"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:gravity="center|bottom"
        android:text="@string/verify_phone"
        android:textColor="@color/text_color"
        android:textSize="35sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center|bottom"
        android:text="@string/enter_passcode"
        android:textColor="@color/colorDarkGray"
        android:textSize="@dimen/_18sdp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|bottom"
        android:text="@string/your_phone_number"
        android:textColor="@color/colorDarkGray"
        android:textSize="@dimen/_18sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passcode_hint" />

    </LinearLayout>

    <Button
        android:id="@+id/continu"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_40sdp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/next"
        android:textColor="#fff"
        android:textSize="@dimen/_12sdp" />

</LinearLayout>