<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_16sdp"
    tools:context=".login.SignUpActivity"
    tools:ignore="MissingPrefix">

    <RelativeLayout
        android:id="@+id/rl_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center">

        <TextView
            android:id="@+id/logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/tabon_circle"
            android:gravity="center"
            android:text="T"
            android:textColor="#FFFFFF"
            android:textSize="50sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView"
        fontPath="fonts/Raleway-Regular.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="@color/colorDarkGray"
        android:textSize="@dimen/_28sdp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textView3"
        fontPath="fonts/Lato-Regular.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/textView"
        android:gravity="center"
        android:text="enter your data"
        android:textSize="@dimen/_16sdp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/rl_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_logo"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:orientation="vertical">

        <!--<android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.design.widget.TextInputLayout>-->

        <EditText
            android:id="@+id/textInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/edit_text_tint"
            android:hint="Name"
            android:textSize="@dimen/_14sdp" />

        <EditText
            android:id="@+id/textInputEditText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/edit_text_tint"
            android:hint="Your email id"
            android:textSize="@dimen/_14sdp" />

        <EditText
            android:id="@+id/textInputEditText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/edit_text_tint"
            android:hint="Your phone number"
            android:textSize="@dimen/_14sdp" />

        <EditText
            android:id="@+id/pass_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/edit_text_tint"
            android:hint="Password"
            android:textSize="@dimen/_14sdp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/rl_fb"
        android:layout_below="@+id/rl_signup"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center">

        <Button
            android:id="@+id/next"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="center"
            android:background="@drawable/rounded_btn"
            android:gravity="center"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="@dimen/_12sdp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/next"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/log_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_toEndOf="@+id/tv1"
                android:layout_toRightOf="@+id/tv1"
                android:gravity="center"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_12sdp" />

        </RelativeLayout>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_fb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:visibility="gone">

        <Button
            android:id="@+id/facebook_login"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:background="@drawable/rounded_fb"
            android:gravity="center"
            android:text="@string/sign_up_fb"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="@dimen/_12sdp" />

        <Button
            android:id="@+id/email_login"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_below="@+id/facebook_login"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/rounded_email"
            android:gravity="center"
            android:text="@string/sign_up_email"
            android:textAllCaps="false"
            android:textSize="@dimen/_12sdp" />

        <Button
            android:id="@+id/google_login"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_below="@+id/facebook_login"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/rounded_ggl"
            android:gravity="center"
            android:text="@string/login_with_ggl"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="@dimen/_12sdp" />


    </RelativeLayout>


</RelativeLayout>
