<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_email"
    tools:context=".signup.VerifyActivity">


    <ImageButton
        android:id="@+id/back5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="#fff"
        android:contentDescription="TODO"
        android:src="@drawable/back" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/back5"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_33sdp"
        android:gravity="center"
        android:text="Please enter code"
        android:textSize="@dimen/_28sdp" />

    <LinearLayout
        android:id="@+id/pin_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:visibility="gone">

        <EditText
            android:id="@+id/pin_first_edittext"
            style="@style/pin_edittext_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/edit_text_tint"
            android:contentDescription="@string/pin_content_desc"
            android:imeOptions="actionNext"
            android:textCursorDrawable="@null" />

        <EditText
            android:id="@+id/pin_second_edittext"
            style="@style/pin_edittext_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/edit_text_tint"
            android:contentDescription="@string/pin_content_desc"
            android:imeOptions="actionNext"
            android:textCursorDrawable="@null" />

        <EditText
            android:id="@+id/pin_third_edittext"
            style="@style/pin_edittext_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/edit_text_tint"
            android:contentDescription="@string/pin_content_desc"
            android:imeOptions="actionNext"
            android:textCursorDrawable="@null" />

        <EditText
            android:id="@+id/pin_forth_edittext"
            style="@style/pin_edittext_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/edit_text_tint"
            android:contentDescription="@string/pin_content_desc"
            android:imeOptions="actionNext"
            android:textCursorDrawable="@null" />


    </LinearLayout>

    <com.saffron.tabon.ui.PinEntryEditText
        android:id="@+id/pinentry"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:cursorVisible="true"
        android:imeOptions="actionDone"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:nextFocusDown="@+id/textView10"
        android:textCursorDrawable="@null"
        android:textIsSelectable="false"
        android:textSize="@dimen/_14sdp"
        app:pinAnimationType="none"
        app:pinLineColors="@color/icon_color"
        app:pinLineStroke="@dimen/_1sdp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/tnc"
        android:layout_below="@id/pinentry"
        android:gravity="center">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_16sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:gravity="center"
            android:text="@string/otp_not_received"
            android:textColor="@color/toolbar_text_color"
            android:textSize="@dimen/_13sdp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/textView10"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/resend"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />

    </RelativeLayout>

    <Button
        android:id="@+id/tnc"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:background="@drawable/button_selector2"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="@dimen/_14sdp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_11sdp"
        android:gravity="center"
        android:text="@string/enter_4_digits_code2"
        android:textColor="@color/toolbar_text_color"
        android:textSize="@dimen/_14sdp" />


</RelativeLayout>