<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup.EmailActivity">


    <ImageButton
        android:id="@+id/back3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@null"
        android:contentDescription="TODO"
        android:src="@drawable/back" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/back3"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_33sdp"
        android:gravity="center"
        android:text="@string/password"
        android:textSize="@dimen/_28sdp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_120sdp"
        android:backgroundTint="@color/edit_text_tint"
        android:ems="10"
        android:hint="New password"
        android:inputType="textPassword"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/_14sdp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:backgroundTint="@color/edit_text_tint"
        android:ems="10"
        android:hint="Confirm password"
        android:inputType="textPassword"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/_14sdp" />


    <!--<TextView
        fontPath="fonts/Raleway-Regular.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_120sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:text="@string/enter_password"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_14sdp"
        tools:ignore="MissingPrefix" />

    <com.fashant.ui.PinEntryEditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_140sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:cursorVisible="true"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:nextFocusDown="@+id/re_pin_edit_text"
        android:textCursorDrawable="@null"
        android:textIsSelectable="false"
        android:textSize="@dimen/_14sdp"
        app:pinAnimationType="none"
        app:pinLineColors="@color/icon_color"
        app:pinLineStroke="@dimen/_1sdp" />

    <TextView
        android:id="@+id/tv_confirm_pass"
        fontPath="fonts/Raleway-Regular.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:text="@string/confirm_password"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_14sdp"
        tools:ignore="MissingPrefix" />

    <com.fashant.ui.PinEntryEditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_confirm_pass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:cursorVisible="true"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:nextFocusDown="@+id/re_pin_edit_text"
        android:textCursorDrawable="@null"
        android:textIsSelectable="false"
        android:textSize="@dimen/_14sdp"
        app:pinAnimationType="none"
        app:pinLineColors="@color/icon_color"
        app:pinLineStroke="@dimen/_1sdp" />-->


    <Button
        android:id="@+id/next3"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_38sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="@dimen/_14sdp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_11sdp"
        android:gravity="center"
        android:text="@string/minimum_4_characters"
        android:textColor="@color/toolbar_text_color"
        android:textSize="@dimen/_14sdp" />


</RelativeLayout>